[gd_scene load_steps=9 format=3 uid="uid://jqn8ipdeutvk"]

[ext_resource type="Script" uid="uid://bjcmpktvg2p7m" path="res://projectiles/rocket/rocket.gd" id="1_uoa5o"]
[ext_resource type="Texture2D" uid="uid://bqubavsk5td7m" path="res://Art/newsprites.png" id="2_seo77"]
[ext_resource type="PackedScene" uid="uid://cilaqubvkn2sv" path="res://CompositionStuff/Hitbox/hitbox_component.tscn" id="3_6onre"]

[sub_resource type="Animation" id="Animation_8vyrs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("outline:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_yfywj"]
resource_name = "loop"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("outline:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1.1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8uk70"]
_data = {
&"RESET": SubResource("Animation_8vyrs"),
&"loop": SubResource("Animation_yfywj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phsm6"]
size = Vector2(34, 14)

[sub_resource type="Curve" id="Curve_8yk6d"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, -304.615), 0.0, 0.0, 0, 0, Vector2(0.983146, 296.703), 0.0, 0.0, 0, 0]
point_count = 2

[node name="rocket" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_uoa5o")

[node name="bulletsprite" type="Sprite2D" parent="."]
modulate = Color(100, 0, 0, 1)
texture = ExtResource("2_seo77")
hframes = 3
vframes = 3

[node name="outline" type="Sprite2D" parent="."]
modulate = Color(100, 0, 100, 0.757)
z_index = -1
texture = ExtResource("2_seo77")
hframes = 3
vframes = 3

[node name="loop" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8uk70")
}
autoplay = "loop"

[node name="HitboxComponent" parent="." instance=ExtResource("3_6onre")]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2
delete_after_hit = true

[node name="hibc" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_phsm6")

[node name="duration" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="trailparticle" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.2, 1.2)
amount = 10
lifetime = 0.5
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angular_velocity_curve = SubResource("Curve_8yk6d")
scale_amount_min = 4.0
scale_amount_max = 5.0

[connection signal="Hit" from="HitboxComponent" to="." method="_on_hitbox_component_hit"]
[connection signal="timeout" from="duration" to="." method="_on_duration_timeout"]
